micromobility_car_pilot/local/Project/dev_ws/log/build_2021-05-23_14-10-20/pilot/stdout_stderr.log
running egg_info
writing ../../build/pilot/pilot.egg-info/PKG-INFO
writing dependency_links to ../../build/pilot/pilot.egg-info/dependency_links.txt
writing entry points to ../../build/pilot/pilot.egg-info/entry_points.txt
writing requirements to ../../build/pilot/pilot.egg-info/requires.txt
writing top-level names to ../../build/pilot/pilot.egg-info/top_level.txt
reading manifest file '../../build/pilot/pilot.egg-info/SOURCES.txt'
writing manifest file '../../build/pilot/pilot.egg-info/SOURCES.txt'
running build
running build_py
copying pilot/pilot_node.py -> /home/user/Projects/dev_ws/build/pilot/build/lib/pilot
running install
running install_lib
copying /home/user/Projects/dev_ws/build/pilot/build/lib/pilot/pilot_node.py -> /home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot
byte-compiling /home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot/pilot_node.py to pilot_node.cpython-38.pyc
  File "/home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot/pilot_node.py", line 55
    elif msg.data = "return":
                  ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/pilot/pilot.egg-info to /home/user/Projects/dev_ws/install/pilot/lib/python3.8/site-packages/pilot-0.0.0-py3.8.egg-info
running install_scripts
Installing pilot_node script to /home/user/Projects/dev_ws/install/pilot/lib/pilot
writing list of installed files to '/home/user/Projects/dev_ws/build/pilot/install.log'
